--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css" >
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Onyx Regional</title>
 </head>
+
 <body>
-    <!-- A nav bar that has a bunch of options on the right and a logo and name on the left-->
-    <div class="section" id="firstSection">
+    <!-- inspiration from https://pienso.com/-->
+    <div id="firstSection">
         <nav>
             <div class="logo">
                 <img id="logo" src="pics/Facebook Cover Image.png" alt="Our Logo">
@@ -23,9 +27,31 @@
         </nav>
     </div>
     <div class="section" id="secondSection">
-        <h1>Onyx Regional</h1>
-        <p>Onyx Regional is a company that specializes in providing the best services to our customers. We have been in business for over 20 years and have a great reputation in the industry. Our team of experts is dedicated to providing the highest quality service to our customers. We offer a wide range of services including web design, graphic design, and marketing. Contact us today to learn more about how we can help you grow your business.</p>
+        <div>
+            <img id="sectionTwoImage" src="pics/Facebook Cover Image.png" alt="Our Logo">
+        </div>
+        <div class="sectionText">
+            <h1>About Onyx Regional</h1>
+            <p>Onyx Regional is a company that specializes in providing the best services to our customers. We have been in business for over 20 years and have a great reputation in the industry. Our team of experts is dedicated to providing the highest quality service to our customers. We offer a wide range of services including web design, graphic design, and marketing. Contact us today to learn more about how we can help you grow your business.</p>
+        </div>
     </div>
-    <h1>Hello World - Oynx Regional</h1>
+    <div class="section" id="thirdSection">
+        <div class="sectionText">
+            <h1>Services</h1>
+            <p>Onyx Regional is a company that specializes in providing the best services to our customers. We have been in business for over 20 years and have a great reputation in the industry. Our team of experts is dedicated to providing the highest quality service to our customers. We offer a wide range of services including web design, graphic design, and marketing. Contact us today to learn more about how we can help you grow your business.</p>
+        </div>
+        <div>
+            <img id="sectionTwoImage" src="pics/Facebook Cover Image.png" alt="Our Logo">
+        </div>
+    </div>
+    <div class="section" id="fourthSection">
+        <div>
+            <img id="sectionTwoImage" src="pics/Facebook Cover Image.png" alt="Our Logo">
+        </div>
+        <div class="sectionText">
+            <h1>Contact Us</h1>
+            <p>Onyx Regional is a company that specializes in providing the best services to our customers. We have been in business for over 20 years and have a great reputation in the industry. Our team of experts is dedicated to providing the highest quality service to our customers. We offer a wide range of services including web design, graphic design, and marketing. Contact us today to learn more about how we can help you grow your business.</p>
+        </div>
+    </div>
 </body>
 </html>
