--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="icon" href="pics/Favicon.ico" type="image/x-icon">
     <title>Onyx Regional</title>
 </head>
 
@@ -50,7 +51,9 @@
         </div>
         <div class="sectionText">
             <h1>Contact Us</h1>
-            <p>Onyx Regional is a company that specializes in providing the best services to our customers. We have been in business for over 20 years and have a great reputation in the industry. Our team of experts is dedicated to providing the highest quality service to our customers. We offer a wide range of services including web design, graphic design, and marketing. Contact us today to learn more about how we can help you grow your business.</p>
+            <p>
+                You can contact us by email leadership@onyx-regional.com.
+            </p>
         </div>
     </div>
 </body>
