--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="sectionText">
             <h1>Contact Us</h1>
             <p>
-                You can contact us by email leadership@onyx-regional.com.
+                You can contact us by email <a href="mailto:leadership@onyx-regional.com">leadership@onyx-regional.com</a>.
             </p>
         </div>
     </div>
