added proper text

--- a/index.html
+++ b/index.html
@@ -16,14 +16,13 @@
     <div id="firstSection">
         <nav>
             <div class="logo">
-                <img id="logo" src="pics/Facebook Cover Image.png" alt="Our Logo">
+                <img id="logo" src="pics/Favicon.ico" alt="Our Logo">
                 <h3>Onyx Regional</h3>
             </div>
             <ul class="nav-links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#secondSection">About</a></li>
+                <li><a href="#thirdSection">Services</a></li>
+                <li><a href="#fourthSection">Contact</a></li>
             </ul>
         </nav>
     </div>
@@ -33,13 +32,25 @@
         </div>
         <div class="sectionText">
             <h1>About Onyx Regional</h1>
-            <p>Onyx Regional is a company that specializes in providing the best services to our customers. We have been in business for over 20 years and have a great reputation in the industry. Our team of experts is dedicated to providing the highest quality service to our customers. We offer a wide range of services including web design, graphic design, and marketing. Contact us today to learn more about how we can help you grow your business.</p>
+            <p>
+                At Onyx Regional, we are passionate about empowering regional businesses with the tools and insights they need to thrive in today’s Information driven business environment. We understand the unique challenges and opportunities that businesses face in regional economies, and we are committed to delivering high-quality, data-driven solutions tailored to your needs.<br><br>
+                Our team brings a wealth of experience in economics, business development, business strategy, programming, and advanced technologies like AI and Geographic Information Systems. Whether you're navigating the  optimizing  strategies, or leveraging AI for smarter decision-making, Onyx Regional is your trusted partner.
+            </p>
         </div>
     </div>
     <div class="section" id="thirdSection">
         <div class="sectionText">
             <h1>Services</h1>
-            <p>Onyx Regional is a company that specializes in providing the best services to our customers. We have been in business for over 20 years and have a great reputation in the industry. Our team of experts is dedicated to providing the highest quality service to our customers. We offer a wide range of services including web design, graphic design, and marketing. Contact us today to learn more about how we can help you grow your business.</p>
+            <p>
+                We understand that informed decision-making is the cornerstone of any successful business. That's why we're dedicated to providing our clients with powerful data solutions that make complex information easy to interpret, analyze, and act upon. <br><br>
+                <ul>
+                    <li>Data Visualization: We transform complex data into clear, intuitive visualizations that allow you to see trends, patterns, and key insights at a glance. Whether its analysis of staff performance, product or business unit performance, research you need presented to stakeholders we can assist you with the hard facts behind your data.
+                    </li><li>Reporting Systems: We design and implement customized reporting systems tailored to your business needs. Our solutions allow you to automate, standardize, and streamline your reporting processes, ensuring you have accurate and timely information in a pleasing simple format at your fingertip, whenever you need it.
+                    </li><li>Geographic Information Systems (GIS): Our GIS solutions enable you to leverage spatial data, enhancing your ability to make location-based decisions. From mapping trends to visualizing regional market conditions, our GIS services empower your business with the geographic context needed to inform your strategies.
+                    </li><li>Business Analysis and Strategic Planning: Business's that don't set goals don't meet their goals. Our team of experts brings in-depth experience in business analysis and strategic planning. We work closely with you to analyze your data, identify key opportunities, and help you develop realistic goals.
+                    </li>
+                </ul>
+            </p>
         </div>
         <div>
             <img id="sectionTwoImage" src="pics/Facebook Cover Image.png" alt="Our Logo">
@@ -52,7 +63,7 @@
         <div class="sectionText">
             <h1>Contact Us</h1>
             <p>
-                You can contact us by email <a href="mailto:leadership@onyx-regional.com">leadership@onyx-regional.com</a>.
+                You can contact us by email <a href="mailto:enquiries@onyx-regional.com">enquiries@onyx-regional.com</a>.
             </p>
         </div>
     </div>
