changed logo for mobile to fix resolution problems

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <nav>
             <div class="logo">
                 <img id="logo" src="pics/Favicon.ico" alt="Our Logo">
+                <img id="mobileLogo" src="pics/Facebook Profile Image.png" alt="Our Logo">
                 <h3>Onyx Regional</h3>
             </div>
             <ul class="nav-links">
