added pictures and tweaked img css

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         </nav>
     </div>
     <div class="section" id="secondSection">
-        <div>
-            <img id="sectionTwoImage" src="pics/Facebook Cover Image.png" alt="Our Logo">
+        <div class="image-wrapper">
+            <img id="sectionTwoImage" src="pics/About/FuturisticRoom.webp" alt="Our Logo">
         </div>
         <div class="sectionText">
             <h1>About Onyx Regional</h1>
@@ -57,12 +57,12 @@
             </p>
         </div>
         <div>
-            <img id="sectionTwoImage" src="pics/Facebook Cover Image.png" alt="Our Logo">
+            <img id="sectionTwoImage" src="pics/Services/CrystalBall.webp" alt="Our Logo">
         </div>
     </div>
     <div class="section" id="fourthSection">
         <div>
-            <img id="sectionTwoImage" src="pics/Facebook Cover Image.png" alt="Our Logo">
+            <img id="sectionTwoImage" src="pics/Contact/JamesP.jpg" alt="Our Logo">
         </div>
         <div class="sectionText">
             <h1>Contact Us</h1>
