--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Onyx Regional is a data analysis business in rural NSW based in Dubbo.">
     <meta name="keywords" content="business, analysis, Power BI, data, visualisation, data capture">
-    <meta name="author" content="James Pridgeon">
+    <meta name="author" content="James Pridgeon, Charles Benson">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
